
name: StringEngine
version: 0.0.2
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved

library
    build-depends: base >=4,
                   template-haskell >=2.9,
                   containers >=0.5,
                   parsec >=3.1,
                   mtl >=2.1
    exposed-modules: Text.StringEngine
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Text.StringEngine.Preprocessor
                   Text.StringEngine.Lexer,
                   Text.StringEngine.Parser,
                   Text.StringEngine.Engine,
                   Text.StringEngine.ToString,
                   Text.StringEngine.DynAny,
                   Text.StringEngine.Functions

    ghc-options: -Wall -rtsopts

test-suite Test
    build-depends: base >=4,
                   HTF >0.9
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -rtsopts

